# lua_pool_allocator

./: .gitignore  README  README.md  build_all.bat  build_all.sh  run_benchmark_tests.bat  run_benchmark_tests.sh  run_test_suites.bat  run_test_suites.sh
benchmark/: lua54.txt  lua54_pool.txt
lua-5.4.4-tests/: time.txt
make_lua_normal/: CMakeLists.txt
make_lua_pool/: CMakeLists.txt
src/: lauxlib.c  lbaselib.c  ldump.c  lgc.c  lobject.h  lstate.c  lstate.h  lstring.c  lstrlib.c  lua.c  lundump.c  lzio.c  lzio.h  pool_alloc.c
src/allocator/: pool_alloc.c  pool_alloc.h
src/lua54/: lapi.c  lauxlib.h  ldblib.c  ldo.c  lmem.c  lmem.h  lopcodes.h  lparser.c  lparser.h  ltable.c  ltablib.c  lvm.c
tests/: test.lua
